visit(LocalMethodBodyNode node)